Footer spacing improved and new circular, almost matches Figma wireframe, new issue with border-radius curving around icons so not quite being circular

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,6 +355,8 @@ nav {
 /*FOOTER FEATURE 
 Elements = footer-small-print, footer icons */
 
+/*TODO-pin footer to the bottom of the page*/
+
 footer {
   margin-top: 2em;
   display: flex;
@@ -366,7 +368,7 @@ footer {
 
 .footer-small-print {
   text-align: center;
-  margin-bottom: 1em;
+  margin: 4em auto 1em;
   justify-content: center; 
 }
 
@@ -378,33 +380,39 @@ footer {
   align-items: center;
   text-align: center;
 }
-
-.footer-links a {
-  background-size: auto;
-  border-radius: 10%;
-  padding: 0.2em;
-  margin: 0.2em;
-  width: 3em;
+.footer-row2 {
+margin-bottom: 40px;
 }
 
+
+.footer-links a { /*should be perfectly circular without distortion*/
+  display: flex;
+  border-radius: 1000px;
+  padding: 9px;
+  margin: 5px;
+  width: auto;
+  height: auto;
+}
+
+.fa-brands {
+
+  font-size: .7em;
+  color: var(--white);
+  margin: auto auto auto auto;
+
+}
 
 
 @media screen and (min-width: 700px) {
   .footer-links {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
   }
-  
-  .footer-links a {
-    padding: 0.2em;
-    margin: 0.2em;
-    width: 3em;
-  }
-  
-  .footer-links a {
-    flex: 1;
-  }
+
+  .footer-row1,
+.footer-row2 {
+  margin-bottom: 40px;}
 }
 
 /*HOME PAGE*/
